# aria-frontend

./: .gitignore  Dockerfile  README.md  app.py  models.py  repository.py  requirements.txt  run.py  run.sh  service.py
.github/workflows/: pylint.yml  python-test.yml
app/: __init__.py  core.py  models.py  routes.py  services.py
app/scrapers/: README.md  base.py  imir.py
app/templates/: article.html  articles.html  base.html
aria/: __init__.py  config.py  views.py
aria/articles/: api.py  models.py  services.py  views.py
aria/celery/: core.py
aria/dashboard/: views.py
aria/scrapers/: core.py  models.py  views.py
aria/templates/: article.html  articles.html  base.html  dashboard.html  scrapers.html
backend/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
backend/migrations/versions/: 02db4aae2449_rename_grade_to_state.py  114bb80448f5_add_summary_translation.py
backend/src/: __init__.py  config.py  extensions.py
backend/src/aria_backend/: __init__.py  cli.py
backend/src/aria_backend/articles/: api.py  models.py  services.py
backend/src/aria_backend/scrapers/: api.py  models.py  services.py
backend/src/articles/: api.py  models.py  services.py
backend/src/scrapers/: api.py  models.py  services.py
backend/tests/: conftest.py  test_articles_services.py  test_scrapers.py  utils.py
frontend/: .gitignore  package-lock.json  package.json
src/: router.ts
templates/: article.html  articles.html  base.html  index.html
tests/: conftest.py  test_articles.py  test_core.py  test_models.py  test_scrapers.py  utils.py
(+23 files in other folders)
