[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aria_backend"
version = "0.1.0"
description = "Aria Backend"
authors = [{ name = "mazzobeg", email = "mazzobel.gvn@gmail.com" }]
requires-python = ">=3.10.12"
dependencies = [
    "alembic==1.13.1",
    "aniso8601==9.0.1",
    "attrs==23.2.0",
    "beautifulsoup4==4.12.3",
    "blinker==1.7.0",
    "bs4==0.0.2",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "exceptiongroup==1.2.0",
    "Flask==3.0.1",
    "Flask-Cors==4.0.0",
    "Flask-Migrate==4.0.5",
    "flask-restx==1.3.0",
    "Flask-SQLAlchemy==3.1.1",
    "idna==3.6",
    "importlib-resources==6.1.1",
    "iniconfig==2.0.0",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.3",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "Mako==1.3.2",
    "MarkupSafe==2.1.5",
    "packaging==23.2",
    "pluggy==1.4.0",
    "pytest==8.0.0",
    "pytz==2024.1",
    "referencing==0.33.0",
    "requests==2.31.0",
    "rpds-py==0.17.1",
    "soupsieve==2.5",
    "SQLAlchemy==2.0.25",
    "tomli==2.0.1",
    "typing_extensions==4.9.0",
    "urllib3==2.2.0",
    "Werkzeug==3.0.1",
]

[project.scripts]
aria-backend = "aria_backend.cli:main"
